<resources>
    <!-- Login activity-->
    <string name="app_name">Balance Money</string>
    <string name="pref_file">com.balance-money.PREF_FILE</string>
    <string name="hint_email">Ingresa tu correo</string>
    <string name="hint_password">Ingresa tu contraseña</string>
    <string name="label_email">Correo</string>
    <string name="label_password">Contraseña</string>
    <string name="button_login">Ingresar</string>
    <string name="create_account">Crear cuenta</string>
    <string name="facebook_app_id">2642299346088713</string>
    <string name="fb_login_protocol_scheme">fb2642299346088713</string>
    <string name="text_createaccount">¿Deseas crear una cuenta?</string>
    <string name="text_forget_password">¿Olvidastes tu contraseña?</string>
    <string name="button_sign_in_google">Continuar con Google</string>
    <string name="enterWith">Ingresar con</string>
    <string name="edit_personal_information">Actualizar mi información</string>
    <string name="logout">Salir</string>
    <string name="reset_password">Restablecer contraseña</string>
    <!-- Create new account -->
    <string name="field_name_create_account">Ingresa el nombre</string>
    <string name="label_name">Nombre</string>
    <string name="field_email_create_account">Ingresa tu correo</string>
    <string name="field_password_create_account">Ingresa tu contraseña</string>
    <string name="field__confirm_password_create_account">Repetir contraseña</string>
    <string name="label_confirm_password">Confirmar contraseña</string>
    <string name="button__create_account">Crear</string>
    <string name="name_toolbar_update_personal_information">Actualizar información</string>
    <string name="name_toolbar_create_personal_information">Crear cuenta</string>
    <string name="change_password_account_user">Cambiar mi contraseña</string>
    <!-- change password-->
    <string name="old_password">Contraseña actual</string>
    <string name="new_password">Contraseña nueva</string>
    <string name="hint_new_password">Ingresa tu contraseña nueva</string>
    <string name="label_confirm_new_password">Confirmar contraseña</string>
    <string name="hint_confirm_new_password">Repetir contraseña nueva</string>
    <string name="name_toolbar_password">Contraseña</string>
    <!-- Menu -->
    <string name="btn_account">Cuentas</string>
    <string name="btn_transactions">Transacciones</string>
    <string name="btn_categories">Categorias</string>
    <string name="btn_stadistics">Estadísticas</string>
    <string name="name_menu">Menu</string>


    <!-- Account
    Strings used for fragments for navigation
     -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="name_toolbar_create_new_account">Crear Cuenta</string>
    <string name="name_toolbar_account">Cuenta</string>
    <!-- Create Account-->
    <string name="field_title_create_account">Nombre</string>
    <string name="field_select_money_create_account">Selecciona la moneda</string>
    <string name="field_amount_create_account">Ingresa el monto</string>
    <string name="field_description_create_account">Ingresa una descripción(No es requerido)</string>
    <string name="label_description_account">Descripción</string>
    <string name="label_amount_account">Monto</string>
    <string name="message_confirmation_new_account">¿Seguro que deseas crear esta nueva cuenta?</string>
    <string name="label_cuenta">Cuenta</string>
    <string name="btn_money_colon">Colones</string>
    <string name="btn_money_dollar">Dólares</string>
    <string name="btn_money_euro">Euros</string>

    <!-- update or delete account-->
    <string name="name_btn_update_account">Actualizar</string>
    <string name="messageDialogTitle">Confirmación</string>
    <string name="messageDialogUpdate">¿Deseas actualizar la cuenta?</string>
    <string name="messageDialogDelete">¿Seguro que deseas eliminar la cuenta?</string>
    <string name="name_toolbar_detail_account">Información de la cuenta</string>
    <!-- category-->
    <string name="name_toolbar_category_main">Categoría</string>
    <string name="name_toolbar_create_new_category">Crear nueva categoría</string>
    <string name="label_name_category">Nombre</string>
    <string name="hint_field_name_category">Ingresa el nombre de la categoría</string>
    <string name="hint_field_description_category">Ingresa una descripción(No es requerido)</string>
    <string name="label_description_category">Descripción</string>
    <string name="text_button_create_new_category">Crear</string>
    <string name="text_button_update_category">Actualizar</string>
    <string name="messageDialogDeleteCategory">¿Seguro que deseas eliminar la categoría?</string>
    <string name="messageDialogUpdateCategory">¿Seguro que deseas actualizar la categoría?</string>
    <string name="message_dialog_create_new_category">¿Seguro que deseas crear esta categoría?</string>
    <string name="name_toolbar_detail_category">Información de la categoría</string>
    <!--Transactions-->
    <string name="name_toolbar_list_transaction">Transacciones</string>
    <string name="name_toolbar_detail_transaction">Detalle de la transacción</string>
    <!--Create transactions-->
    <string name="selec_account">Seleccione la cuenta</string>
    <string name="select_category">Seleccione la categoría</string>
    <string name="txtTypeTransaction">La transacción es un:</string>
    <string name="amount_transaction">Ingresa el monto</string>
    <string name="label_select_money_transaction">Selecciona la moneda</string>
    <string name="label_amount_transaction">Monto</string>
    <string name="income_transaction">Ingreso</string>
    <string name="expense_transaction">Gasto</string>
    <string name="description_transaction">Ingresa una descripción(No es requerido)</string>
    <string name="label_description_transaction">Descripción</string>
    <string name="button_create_transaction">Crear</string>
    <string name="message_dialo_create_new_transaction">¿Seguro que deseas crear esta transacción?</string>
    <string name="name_toolbar_create_transacion">Crear transacción</string>
    <string name="label_date_transaction">Fecha</string>
    <!--Detail transactions-->
    <string name="label_account_detail_transaction">Cuenta</string>
    <string name="label_category_detail_transaction">Categoría</string>
    <string name="label_money_detail_transaction">Moneda</string>
    <string name="message_dialog_delete_transaction">¿Seguro que deseas eliminar esta transacción?</string>
    <!--Stadistics-->
    <string name="label_stadistics_date_start">Fecha de inicio</string>
    <string name="field_text_date_start">Ingresa la fecha de inicio</string>
    <string name="label_stadistics_date_end">Fecha final</string>
    <string name="field_text_date_end">Ingresa la fecha final</string>
    <string name="btn_generate_graphic">Generar gráfico </string>
    <string name="title_activity_test">TestActivity</string>
    <string name="name_toolbar_stadistic">Estadística</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loading">Cargando...</string>
</resources>