<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".UI.account.NewAccountActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtTitleAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/field_name_create_account"
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:hint="@string/field_name_create_account"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/guideline13"
            app:layout_constraintHorizontal_bias="0.432"
            app:layout_constraintStart_toStartOf="@+id/guideline12"
            app:layout_constraintTop_toBottomOf="@+id/txtLabelAccount" />


        <Button
            android:id="@+id/btnColon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/custom_shape_account"
            android:drawableStart="@drawable/colon"
            android:drawablePadding="4dp"
            android:paddingStart="130dp"
            android:paddingEnd="1dp"
            android:text="@string/btn_money_colon"
            android:textAlignment="textStart"
            android:textColor="@color/colorLetter"
            app:layout_constraintEnd_toStartOf="@+id/guideline13"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline12"
            app:layout_constraintTop_toBottomOf="@+id/textSelectMoney" />

        <Button
            android:id="@+id/btnDollar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/custom_shape_account"
            android:drawableStart="@drawable/dollar"
            android:drawablePadding="4dp"
            android:paddingStart="130dp"
            android:paddingEnd="1dp"
            android:text="@string/btn_money_dollar"
            android:textAlignment="textStart"
            android:textColor="@color/colorLetter"
            app:layout_constraintEnd_toStartOf="@+id/guideline13"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline12"
            app:layout_constraintTop_toBottomOf="@+id/btnColon" />

        <Button
            android:id="@+id/btnEuro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/custom_shape_account"
            android:drawableStart="@drawable/euro"
            android:drawablePadding="4dp"
            android:paddingStart="130dp"
            android:paddingEnd="1dp"
            android:text="@string/btn_money_euro"
            android:textAlignment="textStart"
            android:textColor="@color/colorLetter"
            app:layout_constraintEnd_toStartOf="@+id/guideline13"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline12"
            app:layout_constraintTop_toBottomOf="@+id/btnDollar" />

        <EditText
            android:id="@+id/txtAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/field_amount_create_account"
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:hint="@string/field_amount_create_account"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/guideline13"
            app:layout_constraintStart_toStartOf="@+id/guideline12"
            app:layout_constraintTop_toBottomOf="@+id/txtLabelAmountAccount" />

        <EditText
            android:id="@+id/txtDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints="@string/field_description_create_account"
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/field_description_create_account"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toStartOf="@+id/guideline13"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline12"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/btnNewAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/custom_btn"
            android:drawableStart="@drawable/add"
            android:paddingStart="125dp"
            android:paddingEnd="1dp"
            android:text="@string/button__create_account"
            android:textAlignment="textStart"
            android:textColor="@color/colorLetter"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline13"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline12"
            app:layout_constraintTop_toBottomOf="@+id/txtDescription"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <TextView
            android:id="@+id/txtLabelAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/label_cuenta"
            android:textAlignment="textStart"
            android:textColor="@color/colorLetter"
            android:textSize="19sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline13"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline12"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtLabelAmountAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/label_amount_account"
            android:textAlignment="textStart"
            android:textColor="@color/colorLetter"
            android:textSize="19sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline13"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline12"
            app:layout_constraintTop_toBottomOf="@+id/btnEuro" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/label_description_account"
            android:textAlignment="textStart"
            android:textColor="@color/colorLetter"
            android:textSize="19sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline13"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline12"
            app:layout_constraintTop_toBottomOf="@+id/txtAmount" />

        <TextView
            android:id="@+id/textSelectMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/field_select_money_create_account"
            android:textColor="@color/colorLetter"
            android:textSize="19sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline13"
            app:layout_constraintStart_toStartOf="@+id/guideline12"
            app:layout_constraintTop_toBottomOf="@+id/txtTitleAccount" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


