<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent">
    <EditText
        android:id="@+id/editTextDateStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:textSize="@dimen/size_font_tablet"
        android:focusable="false"
        android:hint="@string/field_text_date_start"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLabelSelectDateStart" />

    <TextView
        android:id="@+id/txtLabelSelectDateStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="16dp"
        android:text="@string/label_stadistics_date_start"
        android:textAlignment="textStart"
        android:textColor="@color/colorLetter"
        android:textSize="@dimen/size_font_tablet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDateEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:hint="@string/field_text_date_end"
        android:inputType="date"
        android:textSize="@dimen/size_font_tablet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLabelDateEnd" />

    <TextView
        android:id="@+id/txtLabelDateEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/label_stadistics_date_end"
        android:textAlignment="textStart"
        android:textColor="@color/colorLetter"
        android:textSize="@dimen/size_font_tablet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDateStart" />

    <Button
        android:id="@+id/btnCreateGrafic"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/custom_btn"
        android:text="@string/btn_generate_graphic"
        android:textAllCaps="false"
        android:textSize="@dimen/size_font_tablet"
        android:textColor="@color/colorLetter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDateEnd"
        app:layout_constraintVertical_bias="0.089" />
</androidx.constraintlayout.widget.ConstraintLayout>