<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".UI.category.UpdateDeleteCategoryActivity">

    <EditText
        android:id="@+id/txtNameCategoryDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/hint_field_name_category"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:hint="@string/hint_field_name_category"
        android:inputType="textPersonName"
        android:textSize="@dimen/size_font_smartphone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelNameCategory" />

    <EditText
        android:id="@+id/txtDescriptionCategoryDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/hint_field_description_category"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_field_description_category"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:scrollbars="vertical"
        android:textSize="@dimen/size_font_smartphone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDescriptionCategory" />


    <Button
        android:id="@+id/btnUpdateCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/custom_btn"
        android:drawableStart="@drawable/icon_update"
        android:paddingStart="80dp"
        android:paddingEnd="1dp"
        android:text="@string/text_button_update_category"
        android:textAlignment="textStart"
        android:textColor="@color/colorLetter"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescriptionCategoryDetail" />

    <TextView
        android:id="@+id/labelNameCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="16dp"
        android:text="@string/label_name_category"
        android:textAlignment="textStart"
        android:textColor="@color/colorLetter"
        android:textSize="@dimen/size_font_smartphone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelDescriptionCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/label_description_category"
        android:textAlignment="textStart"
        android:textColor="@color/colorLetter"
        android:textSize="@dimen/size_font_smartphone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNameCategoryDetail" />

</androidx.constraintlayout.widget.ConstraintLayout>