<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".UI.login.LoginActivity">


    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:textSize="@dimen/size_font_smartphone"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/custom_edit_text"
        android:textColorHint="@color/hint_editText"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="hint_editText" />


    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_edit_text"
        android:drawableEnd="@drawable/ic_password_visibility_off_24"
        android:ems="10"
        android:textSize="@dimen/size_font_smartphone"
        android:hint="@string/hint_password"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/hint_editText"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        android:autofillHints="hint_password" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/custom_btn"
        android:onClick="login"
        android:padding="5dp"
        android:text="@string/button_login"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="@color/colorLetter"
        android:textSize="@dimen/size_font_smartphone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <TextView
        android:id="@+id/txtOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enterWith"
        android:textColor="@color/colorLetter"
        android:textSize="@dimen/size_font_smartphone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtForgetPassword" />

    <View
        android:layout_width="140dp"
        android:layout_height="2dp"
        android:layout_marginTop="104dp"
        android:background="@color/colorLetter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <View
        android:layout_width="140dp"
        android:layout_height="2dp"
        android:layout_marginTop="104dp"
        android:background="@color/colorLetter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/loginBtnFacebook"
        android:layout_width="302dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorButtonFacebook"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:textAlignment="center"
        android:textSize="@dimen/size_font_smartphone"
        app:com_facebook_login_text="Continuar con Facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOr" />

    <TextView
        android:id="@+id/txtCreateNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:onClick="openActivityCreateNewAccountUser"
        android:text="@string/text_createaccount"
        android:textColor="@color/colorLetter"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:focusable="true" />

    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginTop="16dp"
        android:onClick="openActivityResetPassword"
        android:text="@string/text_forget_password"
        android:textColor="@color/colorLetter"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCreateNewAccount"
        android:focusable="true" />

    <Button
        android:id="@+id/btnSignInGoogle"
        android:layout_width="302dp"
        android:layout_height="61dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="78dp"
        android:background="@color/colorLetter"
        android:drawableStart="@drawable/google"
        android:drawablePadding="17dp"
        android:paddingStart="10dp"
        android:paddingEnd="1dp"
        android:text="@string/button_sign_in_google"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"
        android:textSize="@dimen/size_font_smartphone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtnFacebook" />

    <TextView
        android:id="@+id/txtLabelEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/label_email"
        android:textAlignment="textStart"
        android:textColor="@color/colorLetter"
        android:textSize="@dimen/size_font_smartphone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLabelPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/label_password"
        android:textAlignment="textStart"
        android:textColor="@color/colorLetter"
        android:textSize="@dimen/size_font_smartphone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>